Fix alignment of social media widgets by using a Bootstrap grid

--- a/public_html/css/template.css
+++ b/public_html/css/template.css
@@ -1684,8 +1684,6 @@ background: linear-gradient(rgba(0, 0, 0, 4.6), rgba(0, 0, 0, 0.7)),
     margin-top: 75px;
     margin-bottom: 50px;
     min-height: 100px;
-/*    min-width: 300px;
-    max-width: 400px;*/
     background-color: #23b3c6;
     border: 1px solid #fff !important;
     overflow: hidden;
@@ -1733,19 +1731,17 @@ background: linear-gradient(rgba(0, 0, 0, 4.6), rgba(0, 0, 0, 0.7)),
     border-spacing:0;
 }
 
-/*.widget-container {
-    display: inline-block;
-    margin: 30px 6vw;
-}*/
-
 .widget {
     border: 2px solid black;
     background-color: #fff;
-    width: 400px;
     height: 500px;
     overflow: hidden;
-    margin: auto;
 }
+
+.widget-container {
+    padding: 50px;
+}
+
 
 .widget-container h2 {
     font-size: 1.4em;
